[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Level_button.gd" type="Script" id=1]
[ext_resource path="res://Scenes/tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Button_Area2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Boulder.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Nav2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Monster.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D" index="0"]

position = Vector2( 0, -773 )
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65524, 6, 0, 65525, 6, 0, 65526, 6, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 196596, 6, 0, 131085, 6, 0, 327668, 6, 0, 327669, 6, 0, 327670, 6, 0, 327671, 6, 0, 327672, 6, 0, 327673, 6, 0, 327674, 6, 0, 327675, 6, 0, 327676, 6, 0, 327677, 6, 0, 327678, 6, 0, 327679, 6, 0, 262157, 6, 0, 458751, 6, 0, 393229, 6, 0, 589823, 6, 0, 524301, 6, 0, 720895, 6, 0, 655360, 6, 0, 655361, 6, 0, 655362, 6, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0 )

[node name="ButtonUp" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 472.738, 194.447 )
scale = Vector2( 0.671875, 0.609375 )

[node name="ButtonRight" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 650.024, 362.868 )
scale = Vector2( 0.671875, 0.609375 )

[node name="ButtonBottom" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 473.846, 551.234 )
scale = Vector2( 0.671875, 0.609375 )

[node name="ButtonLeft" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 278.832, 365.085 )
scale = Vector2( 0.671875, 0.609375 )

[node name="Player" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( -130.381, 203.4 )

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Label" type="Label" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 464.0
margin_right = 275.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Congratulations!
 you passed the test!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="KinematicBody2D" parent="." index="8" instance=ExtResource( 5 )]

position = Vector2( 126.134, 271.222 )
scale = Vector2( 0.44245, 0.44245 )

[node name="Nav2D" parent="." index="9" instance=ExtResource( 6 )]

[node name="Monster" parent="Nav2D" index="0" instance=ExtResource( 7 )]

position = Vector2( 68.7532, 243.092 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Nav2D" index="1"]

navpoly = null
enabled = true

[connection signal="reset" from="." to="ButtonBottom" method="_on_Node2D_reset"]

[connection signal="reset" from="." to="ButtonRight" method="_on_Node2D_reset"]

[connection signal="reset" from="." to="ButtonUp" method="_on_Node2D_reset"]

[connection signal="reset" from="." to="ButtonLeft" method="_on_Node2D_reset"]

[connection signal="button_pressed" from="ButtonUp" to="." method="_on_ButtonUp_button_pressed"]

[connection signal="button_pressed" from="ButtonRight" to="." method="_on_ButtonRight_button_pressed"]

[connection signal="button_pressed" from="ButtonBottom" to="." method="_on_ButtonBottom_button_pressed"]

[connection signal="button_pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_button_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


